# onboarding-de-spark-foundations

./: .gitignore  docker-compose.yaml  onboarding-de-spark-foundations.code-workspace  progress.md  pyproject.toml  readme.md  repo-tree.txt  requirements.txt
data/testing-spark/: customers.csv  orders.csv  products.csv
docs/: SQL_cheatsheet.md
notebooks/: TestingSparkScript.ipynb
notebooks/.Trash-0/info/: _SUCCESS.trashinfo  aws_integration.ipynb.trashinfo  dataframe_sql.ipynb.trashinfo  date.trashinfo  order_date=2025-03-21.trashinfo  order_date=2025-03-22.trashinfo  order_date=2025-03-23.trashinfo  order_date=2025-03-24.trashinfo  order_date=2025-03-25.trashinfo  order_date=2025-03-26.trashinfo  order_date=2025-03-27.trashinfo  order_date=2025-03-28.trashinfo  spark_basics.ipynb.trashinfo
notebooks/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
notebooks/adastra-task/: Data_Exploration_notebook.ipynb  Untitled.ipynb
notebooks/adastra-task/.ipynb_checkpoints/: Data_Exploration_notebook-checkpoint.ipynb
notebooks/data/: TestingSparkScript.ipynb
pyspark-scripts/: daily_sales.py
src/python/: config.py  conftest.py  io.py  steps.py
src/python/customer_transaction_etl/: __init__.py  aggregates.py  base.py  cli.py  config.py  session.py  steps.py  transforms.py
src/python/customer_transaction_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/python/: conftest.py  notready_cli_integration.py  test_aggregates.py  test_daily_sales.py  test_line_amounts_and_totals.py  test_transforms.py
(+78 files in other folders)
